# usv_bringup

./: .gitmodules  README.md
gps_injector/: CMakeLists.txt  package.xml
gps_injector/include/: GPSInjector.hpp
gps_injector/src/: GPSInjector.cpp  main.cpp
launch/: usv_bringup.launch.py
usv_bringup/: CMakeLists.txt  package.xml
usv_bringup/launch/: usv_bringup.launch.py
